# DPP-Rasterization

./: .gitignore  CMakeLists.txt  Makefile  SCALE_SUB.sh  TEST.sh  getTriangleCount.c  imageWriter.cpp  imageWriter.h  main.cpp  main.cu  rast  rastByTri.cpp  rastByTri.cu  rastByTri.h  readSTL.cu  readSTL.h
